# url-shortener

./: .gitignore  Dockerfile  mise.toml
.github/workflows/: deploy.yml
k3s/: depl.yaml
k8s/: ingress.yaml  postgre.yaml  postgres.yaml  rust-server.yaml  sealed-secret.yaml  sealed-secrets-pub.pem  secrets.yaml
rust-server/: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
rust-server/.sqlx/: query-1b6cd6c20c54b8111f5a42b1ba899161c132b59ff73812ac920e363db349dbea.json  query-1df6c0407b163ab102bcdf2f024589801b3bf8e940746368b50dc9e5309fd353.json  query-8b8690452837b5977a708c4e7f909f8b57c783335b61e092658752d46bd52d88.json  query-8e067868c23c7f603d81135ed29f7f2493086689713bb8a85c3ec94d11c2111a.json  query-bd9bf6b9e720ac799c7d7afce308ab62380ec79def9c05a5ceace0faf0eea3ae.json  query-cd832d08e9f4bd66b84f9a34f192e8f8f7c7c83d31d0c675a56599ecde7f2e65.json
rust-server/migrations/: 20260420162026_create_table_urls.sql  20260424124126_add_indexes.sql
rust-server/src/: cleanup.rs  db.rs  main.rs
